deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ams
  namespace: ams
spec:
  selector:
    app: ams
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
